entity_macros/tests/ui/derive/ent/multiple-known-fields.stderr
error: A field can only declare one of `id`, `database`, `created`, or `last_updated`
  --> $DIR/multiple-known-fields.rs:10:11
   |
10 |     #[ent(id, database)]
   |           ^^

error: A field can only declare one of `id`, `database`, `created`, or `last_updated`
  --> $DIR/multiple-known-fields.rs:10:15
   |
10 |     #[ent(id, database)]
   |               ^^^^^^^^

error: A field can only declare one of `id`, `database`, `created`, or `last_updated`
  --> $DIR/multiple-known-fields.rs:13:21
   |
13 |     #[ent(database, id)]
   |                     ^^

error: A field can only declare one of `id`, `database`, `created`, or `last_updated`
  --> $DIR/multiple-known-fields.rs:13:11
   |
13 |     #[ent(database, id)]
   |           ^^^^^^^^

error: Already have an id elsewhere
  --> $DIR/multiple-known-fields.rs:14:5
   |
14 |     database: WeakDatabaseRc,
   |     ^^^^^^^^

error: Already have a database elsewhere
  --> $DIR/multiple-known-fields.rs:14:5
   |
14 |     database: WeakDatabaseRc,
   |     ^^^^^^^^

error: A field can only declare one of `id`, `database`, `created`, or `last_updated`
  --> $DIR/multiple-known-fields.rs:16:11
   |
16 |     #[ent(created, last_updated)]
   |           ^^^^^^^

error: A field can only declare one of `id`, `database`, `created`, or `last_updated`
  --> $DIR/multiple-known-fields.rs:16:20
   |
16 |     #[ent(created, last_updated)]
   |                    ^^^^^^^^^^^^

error: A field can only declare one of `id`, `database`, `created`, or `last_updated`
  --> $DIR/multiple-known-fields.rs:19:25
   |
19 |     #[ent(last_updated, id)]
   |                         ^^

error: A field can only declare one of `id`, `database`, `created`, or `last_updated`
  --> $DIR/multiple-known-fields.rs:19:11
   |
19 |     #[ent(last_updated, id)]
   |           ^^^^^^^^^^^^

error: Already have an id elsewhere
  --> $DIR/multiple-known-fields.rs:20:5
   |
20 |     last_updated: u64,
   |     ^^^^^^^^^^^^

error: Already have a last_updated timestamp elsewhere
  --> $DIR/multiple-known-fields.rs:20:5
   |
20 |     last_updated: u64,
   |     ^^^^^^^^^^^^
